--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css?family=Montserrat:200,300,400,700,900&display=swap");
+@import url('https://fonts.googleapis.com/css?family=Montserrat:200,300,400,700,900&display=swap');
 
 * {
   box-sizing: border-box;
@@ -7,7 +7,7 @@
 }
 
 body {
-  font-family: "Montserrat", sans-serif;
+  font-family: 'Montserrat', sans-serif;
   background-color: #020120;
   color: #ffffff;
   display: flex;
@@ -96,7 +96,7 @@ body {
   font-size: 2.5rem;
   margin: 5px;
 }
-.discription {
+.description {
   letter-spacing: 3px;
   margin: 5px;
   font-size: 2rem;
